--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,9 @@ spring:
   jpa:
     hibernate:
       dialect: org.hibernate.dialect.MySQL5Dialect
-      ddl-auto: create-drop
+      ddl-auto: update
+
+
 
 
 
