--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,8 +9,12 @@ spring:
     hibernate:
       dialect: org.hibernate.dialect.MySQL5Dialect
       ddl-auto: none
-
-
+  jackson:
+#    json序列化 下划线形式
+    property-naming-strategy: SNAKE_CASE
+#    将返回的时间 变为时间戳
+    serialization:
+      write-dates-as-timestamps: true
 
 
 
