--- a/src/main/resources/config/exception-code.properties
+++ b/src/main/resources/config/exception-code.properties
@@ -1,3 +1,4 @@
 xl.codes[10001] = \u901A\u7528\u5F02\u5E38
 
 xl.codes[300005] = banner\u7C7B\u6CA1\u627E\u5230   
+xl.codes[300004] = spu\u7C7B\u6CA1\u627E\u5230   
