##### 0908 - @Validated 要放在class上而不是方法上 - @Positive(message = "{id.positive}") 在resources 的 ValidationMessages.properties 去配置 - 通过categoryId 查询

--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,8 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
 
+<!--        类映射-->
+<!--        赋值类-->
         <dependency>
             <groupId>com.github.dozermapper</groupId>
             <artifactId>dozer-core</artifactId>
